Fixed navigation button alignment

--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -24,6 +24,12 @@ footer {
   padding: 1em;
   color: #fff;
 }
+.navigation {
+  display: flex;
+  a {
+    display: flex;
+  }
+}
 a {
   color: rgba(255, 255, 255, 0.85);
   transition: 200ms color ease;
